# gbb

./: .gitattributes  .gitignore  LICENSE.txt  README.md  gbbasic.sln  gbbasic.vcxproj  gbbasic.vcxproj.filters  gbbvm.cmd  gbbvm.sh
gbbasic/: .gitignore
gbbasic.linux/: .gitignore  CMakeLists.txt
gbbasic.xcodeproj/: ._project.xcworkspace  project.pbxproj
gbbasic.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gbbasic.xcodeproj/xcshareddata/xcschemes/: gbbasic.xcscheme
gbbasic/fonts/: default.json  sub.json
gbbasic/kernels/: default.json  gbbvm.aliases.json
gbbasic/themes/: color.json  default.json
lib/audio_file/: AudioFile.h
lib/bigint/include/constructors/: constructors.hpp
lib/binjgb/src/: emulator.c  emulator.h
lib/imgui/: imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
lib/imgui_code_editor/: imgui_code_editor.cpp  imgui_code_editor.h
lib/jpath/: LICENSE  jpath.hpp  test.cpp
lib/portable_file_dialogs_polyfill/: portable-file-dialogs.cpp  portable-file-dialogs.h
lib/promise_cpp/include/promise-cpp/: add_ons.hpp  promise.hpp  promise_inl.hpp
lib/promise_cpp/src/: promise.cpp
lib/rapidfuzz_cpp/rapidfuzz/details/: config.hpp
lib/sdl/: .gitignore
lib/sdl/src/render/metal/: SDL_render_metal.m
lib/zlib/: gzguts.h
output/: .gitignore
src/: README.md  gbbasic.h  main.cpp
src/app/: README.md  activities.cpp  activities.h  application.cpp  application.h  command.cpp  command.h  commands_actor.cpp  commands_actor.h  commands_font.cpp  commands_font.h  commands_grouped.cpp  commands_grouped.h  commands_layered.cpp  commands_layered.h  commands_map.cpp  commands_map.h  commands_music.cpp  commands_music.h  commands_paintable.cpp  commands_paintable.h  commands_paintable2d.cpp  commands_paintable2d.h  commands_scene.cpp  commands_scene.h  commands_sfx.cpp  commands_sfx.h  commands_tiles.cpp  commands_tiles.h  device.cpp  device.h  device_binjgb.cpp  device_binjgb.h  document.cpp  document.h  editing.cpp  editing.h  editor.cpp  editor.h  editor_actor.cpp  (+47 more)
src/app/mac/: AppDelegate.h  AppDelegate.m  Info-Emu.plist
src/app/mac/Base.lproj/: MainMenu.xib
src/app/resource/: inline_font.h  inline_icon.h  inline_image.h  inline_resource.cpp  inline_resource.h  inline_text.h  inline_toast.h
src/app/win/: gbbasic.rc
src/compiler/: README.md  codepoint.cpp  codepoint.h  compiler.cpp  compiler.h  kernel.cpp  kernel.h  pipeline.cpp  pipeline.h  static_analyzer.cpp  static_analyzer.h
src/utils/: README.md  actor.cpp  actor.h  archive.cpp  archive.h  archive_zip.cpp  archive_zip.h  assets.cpp  assets.h  bytes.cpp  bytes.h  cloneable.cpp  cloneable.h  colour.cpp  colour.h  datetime.cpp  datetime.h  dispatchable.cpp  dispatchable.h  editable.cpp  editable.h  either.cpp  either.h  encoding.cpp  encoding.h  entry.cpp  entry.h  file_handle.cpp  file_handle.h  file_sandbox.cpp  file_sandbox.h  filesystem.cpp  filesystem.h  font.cpp  font.h  generic.cpp  generic.h  hacks.cpp  hacks.h  image.cpp  (+65 more)
src/vm/: README.md  main.c  vm.c  vm.h  vm.i  vm_actor.c  vm_actor.h  vm_actor_aux.c  vm_audio.c  vm_audio.h  vm_device.c  vm_device.h  vm_device_ext.c  vm_effects.c  vm_effects.h  vm_emote.c  vm_emote.h  vm_game.c  vm_game.h  vm_graphics.c  vm_graphics.h  vm_gui.c  vm_gui.h  vm_gui_label.c  vm_gui_menu.c  vm_gui_progressbar.c  vm_input.c  vm_input.h  vm_instructions.c  vm_memory.c  vm_memory.h  vm_native.c  vm_native.h  vm_object.c  vm_object.h  vm_persistence.c  vm_persistence.h  vm_physics.c  vm_physics.h  vm_projectile.c  (+11 more)
src/vm/ctrl/: controller.c  controller.h  controlling.c  controlling.h  platformer.c  platformer.h  pointnclick.c  pointnclick.h  topdown.c  topdown.h
src/vm/data/: bootstrap.s  builtin.c  builtin.h  font.inl  music.inl  sfx.inl  sprites.inl
src/vm/drv/hUGE/: _make_gbdk.bat  _make_gbdk_banked.bat
src/vm/drv/hUGE/lib/: hUGEDriver.lib
src/vm/licenses/: CrashHandler_License.txt  GBBVM_License.txt  GBDK-2020_License.txt  GBVM_License.txt  SfxPlayer_License.txt
src/vm/utils/: crash_handler.s  exception.c  exception.h  font.h  font.s  graphics.h  graphics.s  linked_list.h  rtc.h  scroll.h  scroll.s  sfx_player.c  sfx_player.h  sleep.h  sleep.s  text.c  text.h  timer_handler.s  utils.c  utils.h  utils_banked.c
tools/gbdk/linux/lib/gb/: gb.lib
tools/gbdk/linux/lib/sm83/: sm83.lib
tools/gbdk/linux/libexec/sdcc/: cc1
tools/gbdk/mac/lib/gb/: gb.lib
tools/gbdk/mac/lib/sm83/: sm83.lib
